--- a/app/seminar4/src/main/AndroidManifest.xml
+++ b/app/seminar4/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeminarDAM">
         <activity
+            android:name=".MainActivityFavorite"
+            android:exported="false" />
+        <activity
             android:name=".InteractiuneJson"
             android:exported="false" />
         <activity
@@ -17,9 +21,7 @@
         <activity
             android:name=".ListaImagini"
             android:exported="false" />
-        <activity
-            android:name=".ImagineAdapter"
-            android:exported="false" />
+
         <activity
             android:name=".ListaInsule"
             android:exported="false" />
