--- a/app/seminar4/src/main/AndroidManifest.xml
+++ b/app/seminar4/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,6 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeminarDAM">
+        <activity
+            android:name=".FIrebase"
+            android:exported="false" />
         <activity
             android:name=".MainActivityFavorite"
             android:exported="false" />
@@ -21,7 +25,6 @@
         <activity
             android:name=".ListaImagini"
             android:exported="false" />
-
         <activity
             android:name=".ListaInsule"
             android:exported="false" />
